# nigemizu

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc
src/controllers/: loop.cc  loop.h
src/core/: pool.cc  pool.h  singleton.cc  singleton.h  utils.cc  utils.h
src/entity/: base.cc  base.h  delegate.cc  delegate.h  entity.cc  entity.h  playable.cc  playable.h  projectile.cc  projectile.h
src/graphics/: render.cc  render.h  texture.cc  texture.h
src/interfaces/: boot.cc  boot.h  framerate.cc  framerate.h  keyboard.cc  keyboard.h  modal.cc  modal.h  texture.cc  texture.h
src/meta/: assert.cc  assert.h  boot.cc  boot.h  modal.cc  modal.h  winfunc.cc  winfunc.h
src/models/: config.cc  config.h  entity.cc  entity.h  entity_new.cc  entity_new.h  field.cc  field.h  keyboard.cc  keyboard.h  math.cc  math.h  pool.cc  pool.h  shape.cc  shape.h  singleton.cc  singleton.h  timer.cc  timer.h  vector.cc  vector.h
tests/: CMakeLists.txt  assert_cui.cc  dpool.cc  dpool_st.cc  pool.cc  rounding.cc  singleton.cc  stfn.cc  vector.cc
